--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies" : {
     "express" : "4.15.x",
-    "socket.io" : "2.0.x"
+    "socket.io" : "2.0.x",
+    "request" : "2.81.x"
   },
   "keywords": [],
   "author": "",
